[package]
name = "pjt"
version = "0.1.0"
authors = ["Volodymyr Pivoshenko <volodymyr.pivoshenko@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "pjt - a quick navigation tool for the PyPI packages."
documentation = "https://github.com/volopivoshenko/pjt"
readme = "README.md"
homepage = "https://github.com/volopivoshenko/pjt"
repository = "https://github.com/volopivoshenko/pjt"
license = "MIT"
license-file = "LICENSE"
keywords = [
    "python",
    "pypi",
    "packages",
    "cli",
    "command-line-tool",
    "cross-platform",
    "hacktoberfest",
]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
clap = "4.0.29"
reqwest = "0.11.13"
serde = "1.0.148"
tokio = "1.22.0"

[dev-dependencies]
cargo-modules = "0.6.0"
pretty_assertions = "1.3.0"
serde_json = "1.0.89"
